--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -308,8 +308,7 @@ nocite: |
 
 ### Stomatal conductance
 
-Exposed sun-leaves, though equipped with thermoregulatory traits, are more constrained by $gs$ than shade leaves that are buffered within-canopy [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] because although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. Even so, $T_{opt}$ of $gs$ appears to be similar in sun and shade leaves [Slot et al. 2019]. This influences leaf thermal sensitivity [Perez and Feeley, 2018], but exact mechanisms remain unclear. Inter-specifically, diurnal $gs$ pattern and resulting $A_{max}$ varies where, for instance, $gs$ is greater in angiosperms than gymnosperms [@bonan_ecological_2016; @kleinStomatalSensitivityCO22019]. 
-
+Exposed sun-leaves, though equipped with thermoregulatory traits, are more constrained by $gs$ than shade leaves that are buffered within-canopy [@sanchesDifferentialLeafTraits2010; @hernandezSimilarTemperatureDependence2020] because although evapotranspiration and $gs$ peak during the day, during the midday and afternoon $gs$ declines more steeply in sun leaves resulting in increased $T_{leaf}$ [@sanchesDifferentialLeafTraits2010; @zwienieckiHydraulicLimitationsImposed2004; @kochDiurnalPatternsLeaf1994b; @kosugiSeasonalFluctuationsTemperature2006]. Even so, $T_{opt}$ of $gs$  did not differ significantly between sun and shade leaves in three tropical tree species [Slot et al. 2019], but sun leaves show a stronger decrease in gs to rising temperature than shade leaves (Hernández et al. 2020; Carter et al. 2021 ). Higher maximum temperatures influences leaf thermal sensitivity tolerance [Perez and Feeley, 2018], but exact mechanisms remain unclear.
 
 ### Photosynthesis
 
@@ -323,7 +322,8 @@ Temperature can affect photosynthesis via direct and indirect pathways--directly
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Biophysically, we might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves (Fig. 14.5 in Campbell and Norman 1998; *revisit this!*; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for 3 species in Panama, the optimum temperature for sun leaves tended to be slightly higher than that of shade leaves, but differences were not significant [Slot et al. 2019 ; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of $V_{max}$ and $J_{max}$ didnot vary for tropical sun- and shade-leaves  [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020], and along the vertical gradient of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. 
 
-Interestingly, within-canopy Japanese oak sun and shade leaves were found to maintain similar rates of excess energy production under respective peak light conditions. Excessive light energy not utilized can cause photoinhibition. Thus, sun leaves utilize this excess energy through high electron transport rate ($ETR$) and thermal dissapation, whereas shade leaves compensate for low $ETR$ by adjusting their $N_{area}$ to maintain higher photosythetic capacity than those required to maximize C net gain, a suggested mechanism for cirucmventing photoinihition and thermal dissaptation under sunflecks [@kitaoLeavesJapaneseOak2012; @kitaoCanopyNitrogenDistribution2018]. Perhaps, differences in these thermal stablization strategies realize similar $T_{opt}$ for photosynthesis in sun and shade leaves. 
+@hernandezSimilarTemperatureDependence2020 speculated that the lack of sun-shade differences in Topt may reflect acclimation to similar temperatures of peak photosynthesis. Sun leaves experience higher temperatures, but maximum temperatures are associated with conditions of mid-day stomatal depression, and acclimation to optimize photosynthesis at these temperatures would not be advantageous. Shade leaves that do not experience mid-day depression continue to fix carbon even when afternoon air temperatures peak. Evaluating this requires diurnal monitoring of net photosynthesis through the canopy.
+ 
 
 **Leaf photosynthetic thermal tolerance (Tcrit/ T50)**
 
@@ -331,7 +331,7 @@ $T_{crit}$ is the temperature at which efficiency of photosystem II starts to de
 
 **Thermal tolerance (e.g., $T_{50}$) varies with exposure, but there are no studies isolating effect of height.**
 
-In 1994, Knapp et al. showed that $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also increased from June to August. Within species, @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three tree species measured in Panama.
+In 1994, Knapp et al. showed that $T_{50}$ measured on chinquapin oak (*Quercus muehlenbergii*) growing in xeric, sunnier conditions was higher by $2{^\circ}C$ than bur oak (*Quercus macrocarpa*) growing in shaded mesic conditions. In both species $T_{50}$ also tracked increased from June to August. Within species, @slotPhotosyntheticHeatTolerance2019a found that $T_{50}$ was slightly lower for shade than sun leaves for two of three tree species measured in Panama.
 
 Leaf thermal tolerances are more closely adapted to microenvironment than macroclimate [@feeley_thermal_2020; @slotPhotosyntheticPlasticityTropical2021]. Particularly, in an Australian arid region, *Acacia papyrocarpa* (Benth.) trees showed higher composite climate stress and greater $T_{50}$ in lower north-facing canopy than other canopy positions, correlating with low wind-speed, greater $T_{air}$ and longer leaf thermal time constants [@curtis_intracanopy_2019]. However, more research is required to fully understand the relationship between leaf thermal tolerance and microenvironments.
 
@@ -368,9 +368,9 @@ More interesting in this context is how these shape differences in the climatic 
 
 Greater $VPD$, atmospheric demand and low RH can be more stressful for trees, than soil moisture across biomes-including mesic forests,  as the former limits surface conductance and evapotranspiration to a greater extent than soil moisture [@novickIncreasingImportanceAtmospheric2016; @corlettImpactsWarmingTropical2011; @ruehrWaterAvailabilityDominant2016]. Along with greater VPD, increase in temperature even under adequete water can cause greater tree hydraulic stress due to altered soil-water dynamics than milder drought, in temperate species [@ruehrWaterAvailabilityDominant2016; @parkwilliamsTemperaturePotentDriver2013]. Whereas greater $RH$ can do the opposite, stifling evapotranspiration and thereby increasing $T_{leaf}$ [Fig.3; @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979]. Altered precipitation regimes can cause droughts, that are more  detrimental to larger trees than small trees, because limited soil-water cannot meet the evaporative demand via the long-distance water transport to the canopy [@bennettLargerTreesSuffer2015; @mcgregor_tree_nodate; @bartholomewSmallTropicalForest2020]. However, given adequate moisture to sustain high $g_s$, canopy leaves exposed to more wind and lower humidity should be more effective at cooling when $T_{air}$ exceeds physiological optima (Fig. `r fig_leaf_T`).
 
-Biophysical conditions can alter growth rates, but can do so differently between size classes through influencing existing demographic differences. Particulary evidence in in mesic temperate and subtropical eucalyptus forests shows that higher temperatures primarily reduced tree growth through altering water availability  [@bowmanWarmerWorldWill2014]. Whereas in tropical forests higher nighttime temperatures was associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees [*Clark 2010; 2013; Feeley et al. 2007*], perhaps due to increase in nighttime metabolic respiration that could supress growth. 
+Biophysical conditions can alter growth rates, but can do so differently between size classes through influencing existing demographic differences. Particulary evidence in in mesic temperate and subtropical eucalyptus forests shows that higher temperatures primarily reduced tree growth through altering water availability  [@bowmanWarmerWorldWill2014]. Whereas in tropical forests higher nighttime temperatures was associated with decelarating tree growth rates predominantly in smaller trees but also in taller trees [*Clark 2010; 2013; Feeley et al. 2007*], perhaps due to increase in nighttime respiratory carbon loss that reduced carbon availability for growth. 
 
-**Recently emerging evidence indicates that understory trees tend to exhibit greater growth declines with $T_{air}$ under mesic conditions.** 
+**Recently emerging evidence indicates that understory trees tend to exhibit greater growth declines with increasing $T_{air}$ under mesic conditions.** 
 In eight forests across the northeast United States, growth rates of understory trees declined sharply at higher $T_{air}$ [Fig `r fig_treerings` **???**; @rollinsonClimateSensitivityUnderstory].
 This pattern is initially counter-intuitive in that sun-exposed leaves can experience greater elevation of $T_{leaf}$ over $T_{air}$ than shade leaves (Fig. `r fig_leaf_T` **???**). 
  It is also possible that higher temperatures reduce understorty tree growth in these forests through an indirect mechanism, such as accelerated competition under warmer temperatures. In other cases, warming is associated with taller understory trees with lower LMA that complete their lifecycle under closed-canopy temperate forests [@maesPlantFunctionalTrait2020]. 
