--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -114,7 +114,7 @@ These changes are expected to have profound effects on tree metabolism and fores
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
-Overstory trees form canopies that play a crucial role in moderating macro and microclimate [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017] by buffering extreme temperatures along with other macroclimatic conditions in the understory. 
+Overstory trees form canopies that play a crucial role in moderating forest macroclimates [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], as well as microclimates by buffering understories from extreme temperatures and other macroclimatic conditions [@zellweger_seasonal_2019].
 This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsWithincanopyVariationRate2004a].
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
@@ -141,7 +141,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 In this section, we supplement a review of the existing literature with a new analysis of data on vegetation structure and vertical microclimate profiles from the U.S. National Ecological Observatory Network [NEON; Figs. `r fig_NEON_vertical`-`r SIfig_NEON_all`; Appendix `r appendix_NEON_methods`, Schimel et al. 2007].
 While the focus here is on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer canopy than to height (Parker 1995). 
 
-![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion light incidence, (c) proportion sun leaves, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
+![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six sites in the National Ecological Observatory Network (NEON)**. Shown are  height profiles in growing season (a) leaf area density, (b) proportion sun leaves, (c) proportion light incidence, and July mean ± 1 standard deviation for (d) maximum photosyntehtically active ratiation (PAR), (e) maximum wind speed, (f) minimum humidity, (g) maximum $T_{air}$, and (h) maximum biological temperature, $T_{bio}$. Sites include a tropical montane broadleaf evergreen forest (Pu‘u Maka‘ala Natural Area Reserve, Hawaii; PUUM), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a mixed northern hardwood and coniferous forest (Harvard Forest, MA; HARV). Vertical profiles in micrometeorological variables (d-h) at all NEON sites are shown in Fig. S1.](NEON_height_profiles/figures/profile_all.png)
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
 Foliage distribution is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
@@ -175,7 +175,7 @@ Notably, this pattern can be reversed in open canopy forests or sparse stands, w
 
 **The buffering patterns described above vary geographically, seasonally, and across forests types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, *Defrenne et al. 2021*].**
 The strength of buffering increases with canopy density -- for example, across gradients of elevation [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a; @juckerCanopyStructureTopography2018], moisture [**REF**], and proximity to water, for example in riparian forests [@davisMicroclimaticBufferingForests2019; @macekMaximumAirTemperature2019]. (*Nidhi, please make sure the references are appropriate here-- I rearranged the sentence structure.*)
-Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; @fauset_differences_2018; **double check these refs--at least one didn't belong**].
+Seasonally, canopy buffering capacity is greater in wet than dry seasons, presumably because leaf area is greater in wet seasons [@davisMicroclimaticBufferingForests2019; @rey-sanchez_spatial_2016; @vonarxSpatiotemporalEffectsForest2012a; **double check these refs--at least one didn't belong**].
 
 ## Leaf temperature 
 
@@ -195,6 +195,16 @@ decreases with $g_s$ (Fig. `r fig_leaf_T`e);
 and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fig_leaf_T`c).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/leaf_energy_fig3.png)
+
+**attempted to oraganize**
+
+~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss ( via $gs$ ie. Stomatal conductance and $E$ ie evaporation).
+
+$Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[Bonan 2008]. However, low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low.
+
+Latent heat loss through $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`).
+
+Leaf size and physiology influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). However, greater $gs$ in large leaves under low raditation, can be cooler than small leaves. Sun leaves, such as in upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions. However, because shade leaves have higher thermal capacitance and comparitely lower $gs$, $T_{leaf}$-$T_{air}$ can increase with slight increase in radiation (Fig. `r fig_leaf_T`a).~
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
