--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -198,13 +198,17 @@ and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fi
 
 **attempted to oraganize**
 
-~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss ( via $gs$ ie. Stomatal conductance and $E$ ie evaporation).
+~Solar and longwave radiation can dramatically elevate $T_{leaf}$ well above $T_{air}$ (Fig. `r fig_leaf_T`a) because the heat absorbed through high irradiance can be greater than heat lost through sensible heat (via $ga$ ie. boundary layer conductance) and latent heat loss (via $gs$ ie. Stomatal conductance and $E$ ie evaporation).
 
 $Ga$ and $Gs$ are dominant factors in $T_{leaf}$ flux. $Ga$ increases with wind speed which also in turn increases $gs$, thereby reduces $T_{leaf}$-$T_{air}$ (Fig. `r fig_leaf_T`b). Therefore, high windspeeds in upper canopies such as in NEON sites with windspeeds ~4 ms (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ that are exposed to high radiation loads, upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[Bonan 2008]. However, low wind speeds typically decouple leaves from $T_{air}$, more so when solar radiation is high and $gs$ is low.
 
-Latent heat loss through $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`).
+Latent heat loss through maximum $gs$, cools the leaf and decreases $T_{leaf}$-$T_{air}$, allowing coupling between leaf and air. However in conditions of low soil moisture during drought (Fig. `r fig_leaf_T`), greater temperature than $gs$ thermal optimum, and air dryness causing an increase in VPD, $gs$ becomes limited, thereby increasing $T_{leaf}$-$T_{air}$. Limitation to $gs$ can also exaggerate effects of biophysical factors that contribute to energy inputs such as, solar radiation, humidity and $T_{air}$ (Fig. `r fig_leaf_T`).
 
-Leaf size and physiology influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). However, greater $gs$ in large leaves under low raditation, can be cooler than small leaves. Sun leaves, such as in upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions. However, because shade leaves have higher thermal capacitance and comparitely lower $gs$, $T_{leaf}$-$T_{air}$ can increase with slight increase in radiation (Fig. `r fig_leaf_T`a).~
+Leaf size and physiology influence $ga$, $gs$, leaf thermal capacitance (capacity to hold heat), and therefore also $T_{leaf}$-$T_{air}$. Smaller leaves have thinner boundary layer that enables coupling with $T_{air}$ through higher $ga$ compared to large leaves that can be more decoupled from $T_{air}$ (Fig. `r fig_leaf_T`a). However, greater $gs$ in large leaves under low raditation, can be cooler than small leaves. Sun leaves, such as in upper canopies, tend to have greater $gs$, due to greater stomatal density [Table 1] and lower thermal capacitance due to lower water potential than shade leaves. But exposure to high irradiance in upper canopies which is a dominant source of energy input increases $T_{leaf}$-$T_{leaf}$ more than shade leaves that are shielded from biophysical conditions. However, because shade leaves have higher thermal capacitance and comparitevly lower $gs$, when exposed to an increase in heat flux, $T_{leaf}$-$T_{air}$ can become more elevated than sun leaves (Fig. `r fig_leaf_T`a).
+
+**Within forests, vertical gradients in the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorlogical conditions (Fig. `r fig_leaf_T`).**
+$T_{leaf}$ generally tracks $T_{air}$, and in turn the vertical gradient of $T_{air}$ depends on canopy structure and $LAI$. Closed canopies, and high $LAI$ act as a sheild, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can be much warmer than below canopies layers [@millerOnlySunlitLeaves2021]. On the other hand, open canopies, or lower canopy $LAI$ allow more vertical air mixing and sunlight into below canopies, that can either neutralize $T_{leaf}$ gradient or in the case of 'canopy greenhouse effect' or even sunflecks, can elevate below canopy $T_{leaf}$-$T_{air}$ of shade leaves more than upper canopy due to the propensity of shade leaves mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013]. 
+It is also important to note that NEON sites (in Fig. `r fig_NEON_vertical`) might not exactly reflect the $T_{leaf}$ pattern we might expect, partly because $T_{bio}$, measured using infrared sensor, reflects wide swath of temperatures. But recent advances in $T_{leaf}$ research that we highlight in the Modelling section will enhance our understanding of large scale $T_leaf$ vertical patterns.~   
 
 **Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
